# airflow_duckdb_pipeline

./: .gitignore  README.md  exemplo_00.py  exemplo_01.py  main.py  pyproject.toml  requirements.txt
dags/: api_to_duckdb.py  main.py  pipeline_teste.py
include/: controller.py  db.py  models.py  schema.py
