[project]
name = "airflow-duckdb-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
    "apache-airflow-task-sdk>=1.1.8",
    "duckdb>=1.5.0",
    "duckdb-engine>=0.17.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
]
